Change some colours, text and port

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
         <div class="home-page-container">
 
             <div class="landing-page-fold">
-                <p class="landing-page-fold__main-text"> See the best locations around the world</p>
+                <p class="landing-page-fold__main-text"> See the locations of great images around the world </p>
 
                 <div class="landing-page-fold__main-image"><img src="/home-background/background-gradient.png"></div>
 
