--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -15,7 +15,7 @@ text-shadow: -1px 1px 2px #fff,
 }
 
 body {
-    background-color: #242424;
+    background-color: white;
     overflow: none;    
 }
 
@@ -30,7 +30,7 @@ body {
 
     .panel1 {
         padding-top: 30px;
-        background-color: whitesmoke;
+        background-color: white;
         height: 20%;
         width: 100%;
         position: absolute;
@@ -58,7 +58,7 @@ body {
     .icon-out1 {
         width: 50px;
         height:50px;
-        background-color: grey;
+        background-color: white;
         border-radius: 50%;
         position: absolute;
         top: calc(80% - 25px);
@@ -67,6 +67,7 @@ body {
         z-index: 11;
         transition: 0.5s ease-in-out;
         padding: 0px;
+        box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
     }
 
     .panel__title1 {
@@ -221,7 +222,7 @@ body {
         height: calc(100vh - 47px);
         width: 100%;      
         margin: auto;
-        background-color: #1396FC;
+        background-color: #f44235;
         position: relative;
         overflow: hidden;
     }
@@ -568,7 +569,7 @@ body {
         height: 40px;
         min-width: 70px;
         width: auto;
-        background-color: aquamarine;
+        background-color: #ffc4bf;
         padding: 10px;
         text-align: center;
         line-height: 20px;
@@ -1284,7 +1285,7 @@ body {
         height: calc(100vh - 47px);
         width: 100%;      
         margin: auto;
-        background-color: #1396FC;
+        background-color: #f44235;
         position: relative;
         /*        overflow:scroll;*/
     }
@@ -1627,7 +1628,7 @@ body {
         height: 40px;
         min-width: 70px;
         width: auto;
-        background-color: aquamarine;
+        background-color: #ffc4bf;
         padding: 10px;
         text-align: center;
         line-height: 20px;
@@ -2369,7 +2370,7 @@ body {
         max-width: 1640px;      
         width: 100%;      
         margin: auto;
-        background-color: #1396FC;
+        background-color: #f44235;
         border-radius: 20px;
         padding: 10px;
         /*        overflow: scroll;*/
@@ -2538,7 +2539,7 @@ body {
         height: 40px;
         min-width: 70px;
         width: auto;
-        background-color: aquamarine;
+        background-color: #ffc4bf;
         padding: 10px;
         text-align: center;
         line-height: 20px;
@@ -2743,7 +2744,7 @@ body {
 
     .info-panel__details__holder {        
         width: 100%;
-        background-color: aquamarine;       
+        background-color: #ffc4bf;       
 
     }
 
@@ -2925,7 +2926,7 @@ body {
     .image-holder {
         height: 120px;
         width: 100%;
-        background-color: lightblue;
+        background-color: #ffc4bf;
         overflow-x: scroll;
         white-space: nowrap;
         padding-left: 20px;
@@ -2947,6 +2948,7 @@ body {
         margin: 5px;
         margin-top: 30px;
         display: block;
+        background-color: white;
     }
 
     #slideLeft {
@@ -3429,8 +3431,8 @@ body {
 
 }
 
-/* New way of prioritization */
-.btn-primary-BS { /* 100+1=101 priority score, yay! */
+/* for overwriting bootstrap colour */
+.btn-primary-BS { 
     background-color: #1396FC;
 }
 
