--- a/views/approval.ejs
+++ b/views/approval.ejs
@@ -31,12 +31,7 @@
 
 
             <div class="map-wrapper">
-                <div class="map" id="map" style="width:100%;"></div>
-                <button class="map-button" onclick="switchPanel()">
-                    <img id="camera-button" src="./icons/photo-camera.png">
-                </button>
-                <div class="map-button-square" onclick="switchPanel()">Add Photo</div>
-
+                <div class="map" id="map" style="width:100%;"></div> 
             </div>
 
             <!-- Empty State panel -->
@@ -62,8 +57,8 @@
                     <button class="approveButton" >Approve</button>
                     <button class="rejectButton" >Reject</button>
                     <div id="markerId" class="">id</div>                
-                    <div id="markerTitle" class="info-panel__title">Title location here</div>                
-                    <div id="markerDate" class="info-panel__date">03/07/19</div>
+                    <div id="markerTitle" class="info-panel__title">Approval/Reject Page</div>                
+                    <div id="markerDate" class="info-panel__date"></div>
 
                     <div class="info-panel__tags" id="info-panel__tags">
 
@@ -74,7 +69,7 @@
                     <div class="main-container">
 
                         <div class="container">                            
-                            <img id="expandedImg"  src="https://assets.bwbx.io/images/users/iqjWHBFdfxIU/isyvMy1YgRas/v0/1200x-1.jpg">
+                            <img id="expandedImg"  src="">
                         </div>
 
                         <div class="gallery-container">
