--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
                            placeholder="Enter Password"
                            />
                 </div>
-                <button type="submit" class="btn btn-primary button-colour-ow btn-block">Login</button>
+                <button type="submit" class="button-blue-ow btn-block">Login</button>
             </form>
             <p class="lead mt-4">
                 No Account? <a href="/register" class="text-colour-ow">Register</a>
