--- a/views/register.ejs
+++ b/views/register.ejs
@@ -67,7 +67,7 @@
                            value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
                            />
                 </div>
-                <button type="submit" class="btn btn-primary button-colour-ow btn-block">
+                <button type="submit" class="button-blue-ow btn-block">
                     Register
                 </button>
             </form>
